plugins {
    id 'org.springframework.boot' version '2.7.0'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'java'
//    id 'org.jetbrains.kotlin.jvm' version '1.7.10'
}

group = 'jp.cron.sample'
version = System.getenv("VERSION") ?: "UNKNOWN"
sourceCompatibility = targetCompatibility = JavaVersion.VERSION_17

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

springBoot {
    buildInfo()
}

repositories {
    mavenCentral()
    maven {
        name = "m2-dv8tion"
        url = "https://m2.dv8tion.net/releases"
    }
    maven {
        name = "chew"
        url = "https://m2.chew.pro/snapshots"
    }
}

dependencies {
    implementation 'org.projectlombok:lombok:1.18.24'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    annotationProcessor 'org.projectlombok:lombok:1.18.24'

//    implementation 'com.google.code.gson:gson:2.9.0'

//    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.7.10'
//    implementation 'org.reflections:reflections:0.10.2'

//    implementation "com.google.guava:guava:31.1-jre"

    implementation 'net.dv8tion:JDA:5.0.0-beta.2'
}

//compileKotlin {
//    kotlinOptions.javaParameters = true
//}


tasks.named("bootBuildImage") {
    imageName = 'registry.cron.jp/example-bot:latest'
}